stderr
Card.java:1: error: modifier protected not allowed here
    protected enum Card {
              ^
1 error
